# ChangeLog for app-text/tex-guy
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/tex-guy/ChangeLog,v 1.2 2005/01/01 16:38:09 eradicator Exp $

*tex-guy-1.3.0 (23 Oct 2004)

  23 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +tex-guy-1.3.0.ebuild:
  Initial import. Thanks to MATSUU Takuto <matsuu@gentoo.org> at GentooJP
  EbuildJP, http://ebuild.gentoo.gr.jp/.
