@@ -1,1 +1,3 @@
 MD5 8ec0b3b4bba4e405692ff16368399d1d TeX-Guy-1.3.0.tar.gz 1952613
+RMD160 320af4c24a9a9d6c6706d80b5f80e557a5df86e5 TeX-Guy-1.3.0.tar.gz 1952613
+SHA256 ca33c45ab0df35a86f463a6e02df0432ce50b787699cd3bc5a9c344403439b5d TeX-Guy-1.3.0.tar.gz 1952613
