@@ -1,6 +1,9 @@
 # ChangeLog for app-text/tex-guy
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/tex-guy/ChangeLog,v 1.2 2005/01/01 16:38:09 eradicator Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/tex-guy/ChangeLog,v 1.3 2007/01/17 13:47:28 beandog Exp $
+
+  17 Jan 2007; Steve Dibb <beandog@gentoo.org> tex-guy-1.3.0.ebuild:
+  Add ~amd64, bug 119141
 
 *tex-guy-1.3.0 (23 Oct 2004)
 
